tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__charts__pie_chart_single_slice.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"PieChart[{100}]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect width="360" height="360" fill="rgb(255,255,255)"/>
<path d="M180.00,180.00 L33.00,180.00 A147.00,147.00 0 1,1 33.00,180.00 Z" fill="rgb(94,129,181)" stroke="black" stroke-width="1"><title>100</title></path>
</svg>
