tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__charts__sector_chart.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"SectorChart[{{1, 2}, {2, 3}, {3, 1}}]\")"
---
<svg width="360" height="225" viewBox="0 0 360 225" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect width="360" height="225" fill="rgb(255,255,255)"/>
<path d="M180.00,112.50 L180.00,48.75 A63.75,63.75 0 0,1 235.21,80.62 Z" fill="rgb(94,129,181)" stroke="white" stroke-width="1"/>
<path d="M180.00,112.50 L262.81,64.69 A95.62,95.62 0 0,1 180.00,208.12 Z" fill="rgb(224,147,44)" stroke="white" stroke-width="1"/>
<path d="M180.00,112.50 L180.00,144.38 A31.88,31.88 0 0,1 180.00,80.62 Z" fill="rgb(143,176,50)" stroke="white" stroke-width="1"/>
</svg>
