tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__charts__sector_chart_simple_values.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"SectorChart[{1, 2, 3}]\")"
---
<svg width="360" height="225" viewBox="0 0 360 225" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect width="360" height="225" fill="rgb(255,255,255)"/>
<path d="M180.00,112.50 L84.38,112.50 A95.62,95.62 0 0,1 132.19,29.69 Z" fill="rgb(94,129,181)" stroke="white" stroke-width="1"><title>{1, 1}</title></path>
<path d="M180.00,112.50 L132.19,29.69 A95.62,95.62 0 0,1 275.62,112.50 Z" fill="rgb(224,147,44)" stroke="white" stroke-width="1"><title>{2, 1}</title></path>
<path d="M180.00,112.50 L275.62,112.50 A95.62,95.62 0 0,1 84.38,112.50 Z" fill="rgb(143,176,50)" stroke="white" stroke-width="1"><title>{3, 1}</title></path>
</svg>
